Update style.css to resize all images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="robots" content="index, follow" />
 
   <!-- External CSS -->
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
